compiler/src/test/resources/golden/errors/type_map_key_float.dawn
fn f() -> Int = {
  var m: Map[Float, Int] = map_empty()
  m = map_insert(m, 1.5, 1)
  map_size(m)
}
